--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <div id="footer">
   <h1><b>dasdasdasd<b></h1>
-  <div id="f1"> </div>
+  <div id="f1"> <img id="i1" src="5.jpg"> </img> </div>
   <div id="f2"> </div>
   <div id="f3"> </div>
   <div id="f4"> </div>
