columns added and styled in the css sheet and the photos wrapped together in the directory Images.
Signed-off-by: ibrahim hasan <elmasrye67@hotmail.com>

--- a/index.html
+++ b/index.html
@@ -1,40 +1,40 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-<title>Quds Day</title>
-<link href="main.css" type="text/css" rel="stylesheet" />
+    <meta charset="UTF-8">
+    <title>Quds Day</title>
+    <link href="main.css" type="text/css" rel="stylesheet" />
 </head>
 <body>
+    <div id="pgHeader">
+        <p  id="_1Paragraph">
+          <strong>Quds Day</strong>
+            <br>
+            Is an annual event held on the last Friday of Ramadan to express
+            support for the Palestinians and oppose Zionism and Israel's occupation of Jerusalem.
+        </p>
+    </div>
 
-<div id="header">
-    <p  id="Wel">
-      <b>Quds Day</b><br>
-      is an annual event held on the last Friday of Ramadan to express support for the Palestinians and oppose Zionism and Israel's occupation of Jerusalem.
-    </p>
-</div>
+    <div id="pgBody">
+        <p id="_2Paragraph">
+            dasdasdasd dasdasd dasda g dfhfgh jhgj kjkjhk tyr  dfssg hfghfgj jhgj jghytutyu
+        </p>
+    </div>
 
-<div id="sec">
-<p id="wel2">
-  dasdasdasd dasdasd dasda g dfhfgh jhgj kjkjhk tyr  dfssg hfghfgj jhgj jghytutyu
-</p>
-</div>
+    <h1>
+        <b> Hey </b>
+    </h1>
 
-<div id="footer">
-  <h1><b>dasdasdasd<b></h1>
-  <div id="f1"> <img id="i1" src="5.jpg"> </img> </div>
-  <div id="f2"> </div>
-  <div id="f3"> </div>
-  <div id="f4"> </div>
+    <ul id="pgColumns">
+        <li class="pgColumn">11</li>
+        <li class="pgColumn">22</li>
+        <li class="pgColumn">33</li>
+    </ul>
 
+    <div id="footergdn">
 
+    </div>
 
-</div>
-
-
-
-<div id="footergdn">
-
-</div>
-
-<script src="main.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
