--- a/index.html
+++ b/index.html
@@ -1,40 +1,64 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>Quds Day</title>
-    <link href="main.css" type="text/css" rel="stylesheet" />
+<title>Quds Day</title>
+<link href="main.css" type="text/css" rel="stylesheet" />
+<link rel="canonical"
+  href="/web/tweet-button">
+  <link rel="me"
+  href="https://twitter.com/zeyadetman"
+>
 </head>
 <body>
-    <div id="pgHeader">
-        <p  id="_1Paragraph">
-          <strong>Quds Day</strong>
-            <br>
-            Is an annual event held on the last Friday of Ramadan to express
-            support for the Palestinians and oppose Zionism and Israel's occupation of Jerusalem.
-        </p>
-    </div>
 
-    <div id="pgBody">
-        <p id="_2Paragraph">
-            dasdasdasd dasdasd dasda g dfhfgh jhgj kjkjhk tyr  dfssg hfghfgj jhgj jghytutyu
-        </p>
-    </div>
+  <div id="fb-root"></div>
+  <script>(function(d, s, id) {
+    var js, fjs = d.getElementsByTagName(s)[0];
+    if (d.getElementById(id)) return;
+    js = d.createElement(s); js.id = id;
+    js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.9";
+    fjs.parentNode.insertBefore(js, fjs);
+  }(document, 'script', 'facebook-jssdk'));</script>
 
-    <h1>
-        <b> Hey </b>
-    </h1>
 
-    <ul id="pgColumns">
-        <li class="pgColumn">11</li>
-        <li class="pgColumn">22</li>
-        <li class="pgColumn">33</li>
-    </ul>
+<div id="header">
+    <p  id="Wel">
+      <b>Quds Day</b><br>
+      is an annual event held on the last Friday of Ramadan to express support for the Palestinians and oppose Zionism and Israel's occupation of Jerusalem.
+    </p>
+</div>
 
-    <div id="footergdn">
+<div id="sec">
+<p id="wel2">
+  dasdasdasd dasdasd dasda g dfhfgh jhgj kjkjhk tyr  dfssg hfghfgj jhgj jghytutyu
+</p>
+</div>
 
-    </div>
+<div id="footer">
+  <h1><b><b></h1>
+  <div id="f1"><h2>Know More</h2><p></p></div>
+  <div id="f2"><h2>Share With Friends</h2>
 
-    <script src="main.js"></script>
+    <a class="twitter-share-button"
+  href="https://twitter.com/intent/tweet?hashtags=Palestine,اليوم_,http://zeyadetman.me/QudsDay/العالمى_للقدس" data-size="large">
+Tweet</a>
+<div class="fb-share-button" data-href="http://zeyadetman.me/QudsDay/" data-layout="button" data-size="small" data-mobile-iframe="true"><a class="fb-xfbml-parse-ignore" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2Fzeyadetman.me%2FQudsDay%2F&amp;src=sdkpreparse">Share</a></div>
+</div>
+  <div id="f3"><h2>Stay Tuned</h2>
+
+</div>
+
+
+
+</div>
+
+
+
+<div id="footergdn">
+
+</div>
+
+
+
+<script src="main.js"></script>
 </body>
 </html>
