--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>Quds Day</title>
+<title>Al-Quds Day</title>
 <link href="main.css" type="text/css" rel="stylesheet" />
 <link rel="canonical"
   href="/web/tweet-button">
