--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 <div id="header">
     <p  id="Wel">
-      <b>Quds Day</b><br>
+      <b>Al-Quds Day</b><br>
       is an annual event held on the last Friday of Ramadan to express support for the Palestinians and oppose Zionism and Israel's occupation of Jerusalem.
     </p>
 </div>
