--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   <div id="f2"><h2>Share With Friends</h2>
 
     <a class="twitter-share-button"
-  href="https://twitter.com/intent/tweet?hashtags=Palestine,اليوم_,http://zeyadetman.me/QudsDay/العالمى_للقدس" data-size="large">
+  href="https://twitter.com/intent/tweet?hashtags=Palestine,اليوم_,http://zeyadetman.me/QudsDay" data-size="large">
 Tweet</a>
 <div class="fb-share-button" data-href="http://zeyadetman.me/QudsDay/" data-layout="button" data-size="large" data-mobile-iframe="true"><a class="fb-xfbml-parse-ignore" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2Fzeyadetman.me%2FQudsDay%2F&amp;src=sdkpreparse">Share</a></div>
 </div>
