--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <title>Al-Quds Day</title>
 <link href="main.css" type="text/css" rel="stylesheet" />
 <link rel="canonical"
-  href="/web/tweet-button">
+  href="/">
   <link rel="me"
   href="https://twitter.com/zeyadetman"
 >
