--- a/index.html
+++ b/index.html
@@ -1,40 +1,46 @@
 <html>
+
 <head>
-<title>Al-Quds Day</title>
-<link href="main.css" type="text/css" rel="stylesheet" />
-<link rel="canonical"
-  href="/">
-  <link rel="me"
-  href="https://twitter.com/zeyadetman"
->
+    <title>Al-Quds Day</title>
+    <!-- css file -->
+    <link href="main.css" type="text/css" rel="stylesheet" />
+
+    <link rel="canonical" href="/">
+    <!-- twitter share button -->
+    <link rel="me" href="https://twitter.com/zeyadetman">
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 </head>
+
 <body>
 
-  <div id="fb-root"></div>
-  <script>(function(d, s, id) {
-    var js, fjs = d.getElementsByTagName(s)[0];
-    if (d.getElementById(id)) return;
-    js = d.createElement(s); js.id = id;
-    js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.9";
-    fjs.parentNode.insertBefore(js, fjs);
-  }(document, 'script', 'facebook-jssdk'));</script>
+    <div id="fb-root"></div>
+    <script>
+        (function(d, s, id) {
+            var js, fjs = d.getElementsByTagName(s)[0];
+            if (d.getElementById(id)) return;
+            js = d.createElement(s);
+            js.id = id;
+            js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.9";
+            fjs.parentNode.insertBefore(js, fjs);
+        }(document, 'script', 'facebook-jssdk'));
+    </script>
 
 
-<div id="header">
-    <p  id="Wel">
-      <b>Al-Quds Day</b><br>
-      is an annual event held on the last Friday of Ramadan to express support for the Palestinians and oppose Zionism and Israel's occupation of Jerusalem.
-    </p>
-</div>
+    <div id="header">
+        <p id="Wel">
+            <b>Al-Quds Day</b><br> is an annual event held on the last Friday of Ramadan to express support for the Palestinians and oppose Zionism and Israel's occupation of Jerusalem.
+        </p>
+    </div>
 
-<div id="sec">
-<p id="wel2">
-  dasdasdasd dasdasd dasda g dfhfgh jhgj kjkjhk tyr  dfssg hfghfgj jhgj jghytutyu
-</p>
-</div>
+    <div id="sec">
+        <p id="wel2">
+            dasdasdasd dasdasd dasda g dfhfgh jhgj kjkjhk tyr dfssg hfghfgj jhgj jghytutyu
+        </p>
+    </div>
 
-<div id="footer">
-  <h1><b><b></h1>
+    <div id="footer">
+        <h1><b><b></h1>
   <div id="f1"><h2>Know More</h2><p></p></div>
   <div id="f2"><h2>Share With Friends</h2>
 
@@ -58,7 +64,10 @@ Tweet</a>
 </div>
 
 
-
+<!-- main.js -->
 <script src="main.js"></script>
+<!-- Latest compiled and minified JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+
 </body>
 </html>
