--- a/index.html
+++ b/index.html
@@ -28,8 +28,9 @@
 
 
     <div id="header">
+        <h1 id="title">Al-Quds Day</h1>
         <p id="Wel">
-            <b>Al-Quds Day</b><br> is an annual event held on the last Friday of Ramadan to express support for the Palestinians and oppose Zionism and Israel's occupation of Jerusalem.
+            is an annual event held on the last Friday of Ramadan to express support for the Palestinians and oppose Zionism and Israel's occupation of Jerusalem.
         </p>
     </div>
 
